# rdl_multi_robot

./: .gitignore  Makefile  README.md  terminator.conf
catkin_ws/src/rdl_gazebo/: gazebo.launch
catkin_ws/src/rdl_sim_worlds/worlds/: simple_competition.world
catkin_ws/src/rdl_turtlebot3_description/urdf/: turtlebot3_simplified_burger.urdf.xacro
catkin_ws/src/robot1/: CMakeLists.txt  package.xml
catkin_ws/src/robot1/launch/: robot.launch
catkin_ws/src/robot2/: CMakeLists.txt  package.xml
catkin_ws/src/robot2/launch/: robot.launch
